- moved to Integer.valueOf from explicit construction. - added some Javadocs.